try to fix on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -47,7 +47,7 @@ p.subhead {
   padding-left: 10%;
   padding-right: 10%;
   grid-column-gap: 100px;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
 }
 
 img.gallery {
